--- a/static/html/paste.html
+++ b/static/html/paste.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Paste {0}</title>
     <link rel="stylesheet" href="/css/prism.css">
     <link rel="stylesheet" href="/css/style.css">
